change border to outline to prevent layout shift

--- a/tools/quick-edit/quick-edit.css
+++ b/tools/quick-edit/quick-edit.css
@@ -15,7 +15,7 @@
 
 .remote-cursor-indicator {
   position: relative;
-  border: 2px solid;
+  outline: 2px solid;
 }
 
 [contenteditable="true"]:hover {
